crates/keron-lang/tests/corpus/errors/check/builtin_type_shadow.keron
struct Resource { path: String }

type Secret = "plain"
